# matey

./: .gitignore  pyproject.toml
src/matey/: __init__.py  agent.py  api.py  config_utils.py  db.py  doc_store.py  file_api.py  git_utils.py  graph.py  image_utils.py  ipynb_api.py  ipynb_types.py  llm_api.py  nb_binder.py  notebook.py  url_utils.py  vec_db.py
src/matey/prompts/: dataio_prompt.txt  dispatch_prompt.txt  notebook_prompt.txt  system_prompt.txt
